--- a/SignUp.html
+++ b/SignUp.html
@@ -7,7 +7,7 @@
         <form action="action_page.php" style="border:1px solid #ccc">
             <div class="container">
               <h1>Sign Up</h1>
-              <p>Please fill in this form to create an account.</p>
+              <p>Please fill in this form to created.</p>
               <hr>
           
               <label for="email"><b>Email</b></label>
